# integrador-api/src/config/swagger/swagger-response/usuariosSwagger.yaml
@@ -1,5 +1,5 @@
 paths:
-  /usuarios:
+  /api/usuarios:
     get:
       tags:
         - Usuarios
@@ -43,7 +43,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Usuario'
 
-  /usuarios/paginado:
+  /api/usuarios/paginado:
     get:
       tags:
         - Usuarios
@@ -91,7 +91,7 @@ paths:
                   totalCount:
                     type: integer
 
-  /usuarios/{id}:
+  /api/usuarios/{id}:
     parameters:
       - in: path
         name: id
@@ -176,8 +176,6 @@ components:
           type: string
         username:
           type: string
-        password:
-          type: string
         role:
           type: string
           enum:
@@ -194,7 +192,6 @@ components:
       required:
         - _id
         - username
-        - password
         - role
         - activo
         - createdAt
